Mon Oct 16 11:11:06 2000  Tim Janik  <timj@gtk.org>

	* configure.in: up version number to 1.2.9, interface 9, binary 9.

	* gstrfuncs.c (g_printf_string_upper_bound): added patchy hack to
	pad us around segfaults for usages of '\'' in decimal conversions.
	applied patch from jody:

2000-10-15  Jody Goldberg <jgoldberg@home.com>

        * gstrfuncs.c (g_printf_string_upper_bound) : Add 'G' as a valid
         character.

Sun Aug  6 20:06:02 2000  Tim Janik  <timj@gtk.org>

	* gmessages.c (g_log_domain_check_free): keep *last updated while
	running through the domain list, so we don't screw up the removal,
	patch provided by Gady Kozma <gadykozma@hotmail.com>.

Sun Aug  6 20:03:41 2000  Tim Janik  <timj@gtk.org>

	* gmessages.c (g_log_remove_handler): keep *last updated while running
	through the handler list, so we don't screw up the removal.

2000-09-30  Martin Baulig  <baulig@suse.de>

	* glib.pc.in, gmodule.pc.in, gthread.pc.in: Provide
	pkg-config scripts.

	* configure.in: Create *.pc scripts from the *.pc.in
	templates.
	* Makefile.am (pkgconfig_DATA): Install the *.pc
	scripts in `$(libdir)/pkgconfig'.

Fri Sep  8 21:46:13 2000  Owen Taylor  <otaylor@redhat.com>

	* gmodule/Makefile.am Makefile.am glib-config.in:
	Move headers to @includedir@/glib-1.2/ to allow
	safe coexistance with a glib-2.0 build environment.

Mon Aug 21 14:39:36 2000  Owen Taylor  <otaylor@redhat.com>

	* glib.h: Use C99 varargs macros where possible 
	(check __STDC_VERSION__), otherwise, on gcc, use an alternate 
	form of gcc varargs which is more likely
	to be supported going forward. (Based on some code
	from Raja Harinath)

Wed Aug  9 14:12:03 2000  Owen Taylor  <otaylor@redhat.com>

	* glib.h: Backport correct descriptive comment from 
	1.3.1 so I can close #20285.

2000-07-19  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* configure.in: glibconfig.h now includes files outside of the
	extern "C" block. Makes some C++ compiler happy. Reported by Denis