@@ -1,3 +1,7 @@
+2000-11-29  Martin Baulig  <baulig@suse.de>
+
+	* *.pc.in: Make the pkg-config scripts actually work.
+
 Mon Oct 16 11:11:06 2000  Tim Janik  <timj@gtk.org>
 
 	* configure.in: up version number to 1.2.9, interface 9, binary 9.
